# peruse

./: .flatpak-manifest.json  .gitignore  .gitlab-ci.yml  .gitmodules  .kde-ci.yml  CMakeLists.txt  PLAN.md  README.md  chmlib-arm.patch  snapcraft.yaml
data/: AndroidManifest.xml
po/ar/: peruse.po
po/ca/: peruse.po
po/ca@valencia/: peruse.po
po/cs/: peruse.po
po/de/: peruse.po
po/en_GB/: peruse.po
po/eo/: peruse.po
po/es/: peruse.po
po/et/: peruse.po
po/eu/: peruse.po
po/fi/: peruse.po
po/fr/: peruse.po
po/ga/: peruse.po
po/gl/: peruse.po
po/he/: peruse.po
po/ia/: peruse.po
po/it/: peruse.po
po/ja/: peruse.po
po/ka/: peruse.po
po/ko/: peruse.po
po/lt/: peruse.po
po/nl/: peruse.po
po/pa/: peruse.po
po/pl/: peruse.po
po/pt/: peruse.po
po/pt_BR/: peruse.po
po/ru/: peruse.po
po/sk/: peruse.po
po/sl/: peruse.po
po/sv/: peruse.po
po/tr/: peruse.po
po/ug/: peruse.po
po/uk/: peruse.po
po/zh_CN/: peruse.po
po/zh_TW/: peruse.po
src/: CMakeLists.txt  Messages.sh
src/acbf/: AcbfAuthor.cpp  AcbfAuthor.h  AcbfBinary.cpp  AcbfBinary.h  AcbfBody.cpp  AcbfBody.h  AcbfBookinfo.cpp  AcbfBookinfo.h  AcbfContentrating.cpp  AcbfContentrating.h  AcbfData.cpp  AcbfData.h  AcbfDatabaseref.cpp  AcbfDatabaseref.h  AcbfDocument.cpp  AcbfDocument.h  AcbfDocumentinfo.cpp  AcbfDocumentinfo.h  AcbfFrame.cpp  AcbfFrame.h  AcbfIdentifiedObjectModel.cpp  AcbfIdentifiedObjectModel.h  AcbfInternalReference.cpp  AcbfInternalReference.h  AcbfInternalReferenceObject.cpp  AcbfInternalReferenceObject.h  AcbfJump.cpp  AcbfJump.h  AcbfLanguage.cpp  AcbfLanguage.h  AcbfMetadata.cpp  AcbfMetadata.h  AcbfPage.cpp  AcbfPage.h  AcbfPublishinfo.cpp  AcbfPublishinfo.h  AcbfReference.cpp  AcbfReference.h  AcbfReferences.cpp  AcbfReferences.h  (+15 more)
src/app/: CMakeLists.txt  main.cpp  org.kde.peruse.appdata.xml  org.kde.peruse.desktop  resources.qrc
src/app/icon/: CMakeLists.txt
src/app/qml/: About.qml  Book.qml  BookDetails.qml  BookInfoPage.qml  BooksByTitlePage.qml  Bookshelf.qml  CategoryPage.qml  Categoryshelf.qml  FileFinder.qml  Main.qml  MobileMain.qml  MobileMainWindow.qml  NewStuffStuff.qml  PeruseContextDrawer.qml  PeruseMain.qml  SearchBox.qml  Settings.qml  Store.qml  WelcomePage.qml
src/app/qml/listcomponents/: BookTile.qml  BookTileTall.qml  CategoryTile.qml  CategoryTileTall.qml  ListPageHeader.qml  Section.qml
src/app/qml/viewers/: ImageBrowser.qml  ViewerBase.qml  cbr.qml  folderofimages.qml  okular.qml
src/app/qml/viewers/helpers/: HolyRectangle.qml  JumpHandler.qml  Navigator.qml  TextAreaHandler.qml
src/common/: CMakeLists.txt  peruse_helpers.cpp  peruse_helpers.h
src/contentlist/: BalooContentLister.cpp  BalooContentLister.h  CMakeLists.txt  ContentList.cpp  ContentList.h  ContentListerBase.cpp  ContentListerBase.h  ContentQuery.cpp  ContentQuery.h  FilesystemContentLister.cpp  FilesystemContentLister.h  qmldir  qmlplugin.cpp  qmlplugin.h
src/creator/: CMakeLists.txt  main.cpp  org.kde.perusecreator.appdata.xml  org.kde.perusecreator.desktop  resources.qrc
src/creator/icon/: CMakeLists.txt
src/creator/qml/: About.qml  AddPageArea.qml  AddPageSheet.qml  Book.qml  BookBasics.qml  BookBinaries.qml  BookBinaryEditor.qml  BookMetainfoPage.qml  BookMetainfoSheet.qml  BookPage.qml  BookReferenceEditor.qml  BookReferences.qml  BookStylesheet.qml  CreateNewBook.qml  EditPageArea.qml  LinkEditorSheet.qml  Main.qml  MessageBoxSheet.qml  PageMetaInfo.qml  Settings.qml  SettingsPage.qml  WelcomePage.qml
src/creator/qml/metainfoeditors/: AuthorEntryEditor.qml  LanguageTextEntryEditor.qml
src/qtquick/: ArchiveBookModel.cpp  ArchiveBookModel.h  ArchiveImageProvider.cpp  ArchiveImageProvider.h  BookDatabase.cpp  BookDatabase.h  BookListModel.cpp  BookListModel.h  BookModel.cpp  BookModel.h  CMakeLists.txt  CategoryEntriesModel.cpp  CategoryEntriesModel.h  CategoryModel.cpp  CategoryModel.h  ComicCoverImageProvider.cpp  ComicCoverImageProvider.h  FilterProxy.cpp  FilterProxy.h  FolderBookModel.cpp  FolderBookModel.h  PDFCoverImageProvider.cpp  PDFCoverImageProvider.h  PeruseConfig.cpp  PeruseConfig.h  PreviewFetcher.cpp  PreviewImageProvider.cpp  PreviewImageProvider.h  PropertyContainer.cpp  PropertyContainer.h  TextDocumentEditor.cpp  TextDocumentEditor.h  TextViewerItem.cpp  TextViewerItem.h  peruse.knsrc  qmldir  qmlplugin.cpp  qmlplugin.h  types.cpp  types.h
src/qtquick/karchive-rar/: CMakeLists.txt  KRar.cpp  KRar.h  KRarFileEntry.cpp  KRarFileEntry.h
src/qtquick/karchive-rar/unarr/: AUTHORS  README  unarr.h
src/qtquick/karchive-rar/unarr/common/: allocator.h  stream.c  unarr-imp.h
src/qtquick/karchive-rar/unarr/lzmasdk/: 7zTypes.h  CpuArch.h  LzmaDec.h  Ppmd.h  Ppmd7.h  Ppmd8.h
src/qtquick/karchive-rar/unarr/rar/: filter-rar.c  lzss.h  rar.h  rarvm.h
